infra/monitoring/ingress_moni1.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # cert-manager.io/issuer: letsencrypt
    # cert-manager.io/issuer-kind: Issuer
    # cert-manager.io/issuer-group: cert-manager.io
spec:
  ingressClassName: nginx-moni
  rules:
  - host: prometheus.eisi-dune.eu
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
  - host: grafana.eisi-dune.eu
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
  - host: loki.eisi-dune.eu
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: loki
            port:
              number: 3100
#  tls: # placing a host in the TLS config will determine what ends up in the cert's subjectAlt
#  - hosts:
#    - grafana.eisi-dune.eu
#    - prometheus.eisi-dune.eu
#    - loki.eisi-dune.eu
#    secretName: secret-tlsmoni # cert-manager will store the created certificate in this secret.
